begin factory pattern

--- a/project/makefile
+++ b/project/makefile
@@ -8,8 +8,9 @@
 HFPD_01_ALL_CPP = $(wildcard $(HFDP_SRC_01)/*.cpp)
 HFPD_02_ALL_CPP = $(wildcard $(HFDP_SRC_02)/*.cpp)
 HFPD_03_ALL_CPP = $(wildcard $(HFDP_SRC_03)/*.cpp)
+HFPD_04_ALL_CPP = $(wildcard $(HFDP_SRC_04)/*.cpp)
 
-all:chp_01 chp_02 chp_03
+all:chp_01 chp_02 chp_03 chp_04
 
 
 chp_01:chk_target_dir
@@ -21,6 +22,8 @@ chp_02:chk_target_dir
 chp_03:chk_target_dir
 	$(CC) -o $(HFDP_TARGET)/$@ $(HFPD_03_ALL_CPP) -I $(HFDP_INC_03)
 
+chp_04:chk_target_dir
+	$(CC) -g -o $(HFDP_TARGET)/$@ $(HFPD_04_ALL_CPP) -I $(HFDP_INC_04)
 
 chk_target_dir:
 	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
