begin Command Pattern

--- a/project/makefile
+++ b/project/makefile
@@ -9,8 +9,9 @@ HFPD_01_ALL_CPP = $(wildcard $(HFDP_SRC_01)/*.cpp)
 HFPD_02_ALL_CPP = $(wildcard $(HFDP_SRC_02)/*.cpp)
 HFPD_03_ALL_CPP = $(wildcard $(HFDP_SRC_03)/*.cpp)
 HFPD_04_ALL_CPP = $(wildcard $(HFDP_SRC_04)/*.cpp)
+HFPD_06_ALL_CPP = $(wildcard $(HFDP_SRC_06)/*.cpp)
 
-all:chp_01 chp_02 chp_03 chp_04
+all:chp_01 chp_02 chp_03 chp_04 chp_06
 
 
 chp_01:chk_target_dir
@@ -24,6 +25,9 @@ chp_03:chk_target_dir
 
 chp_04:chk_target_dir
 	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_04_ALL_CPP) -I $(HFDP_INC_04)
+
+chp_06:chk_target_dir
+	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_06_ALL_CPP) -I $(HFDP_INC_06)
 
 chk_target_dir:
 	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
