begin template method pattern

--- a/project/makefile
+++ b/project/makefile
@@ -10,8 +10,9 @@ HFPD_02_ALL_CPP = $(wildcard $(HFDP_SRC_02)/*.cpp)
 HFPD_03_ALL_CPP = $(wildcard $(HFDP_SRC_03)/*.cpp)
 HFPD_04_ALL_CPP = $(wildcard $(HFDP_SRC_04)/*.cpp)
 HFPD_06_ALL_CPP = $(wildcard $(HFDP_SRC_06)/*.cpp)
+HFPD_08_ALL_CPP = $(wildcard $(HFDP_SRC_08)/*.cpp)
 
-all:chp_01 chp_02 chp_03 chp_04 chp_06
+all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08
 
 
 chp_01:chk_target_dir
@@ -28,6 +29,9 @@ chp_04:chk_target_dir
 
 chp_06:chk_target_dir
 	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_06_ALL_CPP) -I $(HFDP_INC_06)
+
+chp_08:chk_target_dir
+	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_08_ALL_CPP) -I $(HFDP_INC_08)
 
 chk_target_dir:
 	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
