begin iterator pattern

--- a/project/makefile
+++ b/project/makefile
@@ -11,9 +11,12 @@ HFPD_03_ALL_CPP = $(wildcard $(HFDP_SRC_03)/*.cpp)
 HFPD_04_ALL_CPP = $(wildcard $(HFDP_SRC_04)/*.cpp)
 HFPD_06_ALL_CPP = $(wildcard $(HFDP_SRC_06)/*.cpp)
 HFPD_08_ALL_CPP = $(wildcard $(HFDP_SRC_08)/*.cpp)
+HFPD_09_ALL_CPP = $(wildcard $(HFDP_SRC_09)/*.cpp)
 
-all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08
+all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08 chp_09
 
+chk_target_dir:
+	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
 
 chp_01:chk_target_dir
 	$(CC) -o $(HFDP_TARGET)/$@ $(HFPD_01_ALL_CPP) -I $(HFDP_INC_01)
@@ -33,8 +36,8 @@ chp_06:chk_target_dir
 chp_08:chk_target_dir
 	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_08_ALL_CPP) -I $(HFDP_INC_08)
 
-chk_target_dir:
-	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
+chp_09:chk_target_dir
+	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_09_ALL_CPP) -I $(HFDP_INC_09)
 
 clean:
 	$(RM) $(HFDP_TARGET)
