--- a/project/makefile
+++ b/project/makefile
@@ -4,7 +4,6 @@
 
 .PHONY: clean
 
-
 HFPD_01_ALL_CPP = $(wildcard $(HFDP_SRC_01)/*.cpp)
 HFPD_02_ALL_CPP = $(wildcard $(HFDP_SRC_02)/*.cpp)
 HFPD_03_ALL_CPP = $(wildcard $(HFDP_SRC_03)/*.cpp)
@@ -12,8 +11,9 @@ HFPD_04_ALL_CPP = $(wildcard $(HFDP_SRC_04)/*.cpp)
 HFPD_06_ALL_CPP = $(wildcard $(HFDP_SRC_06)/*.cpp)
 HFPD_08_ALL_CPP = $(wildcard $(HFDP_SRC_08)/*.cpp)
 HFPD_09_ALL_CPP = $(wildcard $(HFDP_SRC_09)/*.cpp)
+HFPD_10_ALL_CPP = $(wildcard $(HFDP_SRC_10)/*.cpp)
 
-all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08 chp_09
+all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08 chp_09 chp_10
 
 chk_target_dir:
 	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
@@ -39,6 +39,8 @@ chp_08:chk_target_dir
 chp_09:chk_target_dir
 	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_09_ALL_CPP) -I $(HFDP_INC_09)
 
+chp_10:chk_target_dir
+	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_10_ALL_CPP) -I $(HFDP_INC_10)
+
 clean:
 	$(RM) $(HFDP_TARGET)
-
