--- a/project/makefile
+++ b/project/makefile
@@ -12,8 +12,9 @@ HFPD_06_ALL_CPP = $(wildcard $(HFDP_SRC_06)/*.cpp)
 HFPD_08_ALL_CPP = $(wildcard $(HFDP_SRC_08)/*.cpp)
 HFPD_09_ALL_CPP = $(wildcard $(HFDP_SRC_09)/*.cpp)
 HFPD_10_ALL_CPP = $(wildcard $(HFDP_SRC_10)/*.cpp)
+HFPD_12_ALL_CPP = $(wildcard $(HFDP_SRC_12)/*.cpp)
 
-all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08 chp_09 chp_10
+all:chp_01 chp_02 chp_03 chp_04 chp_06 chp_08 chp_09 chp_10 chp_12
 
 chk_target_dir:
 	$(IF) [ ! -d $(HFDP_TARGET) ]; then mkdir -p $(HFDP_TARGET); fi
@@ -41,6 +42,9 @@ chp_09:chk_target_dir
 
 chp_10:chk_target_dir
 	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_10_ALL_CPP) -I $(HFDP_INC_10)
+
+chp_12:chk_target_dir
+	$(CC) $(CCFLAG) -o $(HFDP_TARGET)/$@ $(HFPD_12_ALL_CPP) -I $(HFDP_INC_12)
 
 clean:
 	$(RM) $(HFDP_TARGET)
